--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "keywords": ["blogs", "editing"],
     "author": "Matt Loseke & Ben Reinhart",
     "dependencies": {
-        "qs": ">=0.5.3",
         "async": ">=0.2.6",
         "express": ">=3.1.0",
         "js-yaml": ">=2.0.3",
         "mongoose": ">=3.5.7",
+        "underscore": ">=1.4.4",
         "coffee-script": ">=1.4.0"
     },
     "devDependencies": {},
