Got users setup

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "author": "Matt Loseke & Ben Reinhart",
     "dependencies": {
         "async": ">=0.2.6",
+        "bcrypt": ">=0.7.5",
         "express": ">=3.1.0",
         "js-yaml": ">=2.0.3",
         "mongoose": ">=3.5.7",
